Add support for blacklisting types